fix(lexical-input): input flickering after adding an inline code [WPB-12089] (#18593)
* fix(lexical-input): input flickering after adding an inline code

* refactor(lexical-input): remove unused styles from conversation input bar

* fix(lexical-input): correct selector for inline code styling to prevent input flickering

* fix(lexical-input): update padding for inline code styling to enhance visual consistency

--- a/src/style/components/lexical-input.less
+++ b/src/style/components/lexical-input.less
@@ -61,6 +61,12 @@
 .editor-paragraph {
   //margin: 0 0 15px 0;
   position: relative;
+
+  // Inline code should have a smaller, custom line height
+  // It prevents input from flickering when inserting an inline code
+  code:not(.editor-code) {
+    line-height: 17px;
+  }
 }
 
 .dropdown .item .icon {
@@ -183,10 +189,11 @@
 }
 
 .editor-inline-code {
-  display: inline-block;
+  display: inline;
   padding: 2px 4px;
   border-radius: 4px;
   background: var(--foreground-fade-8);
+  font-size: var(--font-size-medium);
 }
 
 .editor-code {
